@@ -10,6 +10,8 @@
 #include <stdio.h>
 #include <stdlib.h>
 #include "mp-quest.h"
+#include "mp-consts.h"
+#include "mp-zeta.h"
 
 void qint(mpf_t center, double scale, int prec)
 {
@@ -30,16 +32,16 @@ void qint(mpf_t center, double scale, int prec)
 	qfmean = mpf_get_d(qmid);
 	printf("#\n# Mean=%g ?(Mean)=%g\n", fmean, qfmean); 
 
-	npts = 1600;
+	npts = 5600;
 	
 	mpf_set_d(step, 1.41333);
 	mpf_sqrt(step, step);
 	mpf_sqrt(step, step);
-#if 1
 	mpf_sqrt(step, step);
 	mpf_sqrt(step, step);
 	mpf_sqrt(step, step);
 	mpf_sqrt(step, step);
+#if 0
 	mpf_sqrt(step, step);
 	mpf_sqrt(step, step);
 #endif
@@ -47,6 +49,7 @@ void qint(mpf_t center, double scale, int prec)
 
 	mpf_set_ui(eps, 1);
 	mpf_div_ui(eps, eps, 100);
+	// mpf_set_d(eps, 1.0e-100);
 	// mpf_set_d(eps, 1.0e-200);
  
 	for (i=0; i<npts; i++)
@@ -83,14 +86,12 @@ void qint(mpf_t center, double scale, int prec)
 	}
 }
 
-void goldy(int prec)
+void goldy(double scale, int prec)
 {
 	mpf_t golden;
 	mpf_init(golden);
 
-	// mpf_set_ui (x, 1);
-	// mpf_div_ui (x, x, 4);
-
+#if GOLDEN
 	// Golden ratio
 	// golden = 0.5*(sqrt(5.0) - 1.0);
 	mpf_sqrt_ui(golden, 5);
@@ -99,33 +100,74 @@ void goldy(int prec)
 
 	/* Wow!  eps^0.28 provides an excellent fit. */
 	// pow(feps, 0.2798); even ebetter!
-	// qint(golden, 0.2798, prec);
+	qint(golden, 0.2798, prec);
+#endif
 
-	// Silver mean
+#if SILVER
+	// Silver mean 0.2141 is a good fit
 	mpf_sqrt_ui(golden, 2);
 	mpf_sub_ui(golden, golden, 1);
-	qint(golden, 0.213, prec);
+	qint(golden, 0.2141, prec);
+#endif
+
+#if 0
+	mpf_set_ui(golden, 1);
+	mpf_div_ui(golden, golden, 12);
+	qint(golden, scale, prec);
+#endif 
+
+	fp_pi(golden, prec);
+	mpf_sub_ui(golden, golden, 3);
+
+#if 0
+	fp_e(golden, prec);
+	mpf_sub_ui(golden, golden, 2);
+
+	fp_half_sqrt_three(golden);
+
+	fp_pi_half(golden, prec);
+	mpf_sub_ui(golden, golden, 1);
+
+	fp_sqrt_two_pi(golden, prec);
+	mpf_sub_ui(golden, golden, 2);
+
+	fp_log_two_pi(golden, prec);
+   mpf_sub_ui(golden, golden, 1);
+
+	fp_two_over_pi(golden, prec);
+	fp_log2(golden, prec);
+	fp_euler_mascheroni(golden, prec);
+
+	fp_zeta_even(golden, 2, prec);
+	fp_zeta(golden, 3, prec);
+	fp_zeta(golden, 5, prec);
+   mpf_sub_ui(golden, golden, 1);
+#endif
+
+	qint(golden, scale, prec);
 }
 
 int main (int argc, char * argv[])
 {
 	int prec, nbits;
+	double scale;
 
-	if (2 > argc)
+	if (3 > argc)
 	{
-		fprintf(stderr, "Usage: %s <decimal-precision>\n", argv[0]);
+		fprintf(stderr, "Usage: %s <decimal-precision> <scale>\n", argv[0]);
 		exit(1);
 	}
 
 	/* prec is decimal-places of precision */
 	prec = 50;
 	prec = atoi(argv[1]);
+	scale = atoi(argv[2]);
 
 	/* Set the precision (number of binary bits) */
 	nbits = 3.3*prec;
 	mpf_set_default_prec (nbits);
 
-	goldy(prec);
+	goldy(scale, prec);
 	
 	return 0;
 }
